# flatbuffers_in_action

./: CMakeLists.txt  main.cpp  readme.md
communication/: server.cpp  server.h
js/: client.js  weapon_generated.js
schema/: monster_generated.h
